syntax = "proto3";

option java_package = "com.madchan.imserver.bean.wrapper";
option java_outer_classname = "MessageWrapperDTO";

message MessageWrapper {
    enum WrapperType {
        WRAPPER_TYPE_UNSPECIFIED = 0;    // 未指定
        WRAPPER_TYPE_MESSAGE = 1;   // 聊天消息
        WRAPPER_TYPE_PING = 2;   // PING
        WRAPPER_TYPE_PONG = 3;   // PONG
    }
    //包装器唯一值
    uint64 wrapper_id = 1;
    //包装器类型
    WrapperType wrapper_type = 2;
    //包装器数据
    bytes data = 3;
}

